# Battlebit-Community-Server-Launcher

./: .gitignore  BattleBit_Remastered_Technical_Definitions.md  Cargo.toml  LICENSE  LICENSE.md  README.md  build.rs  download.py  example.env  manifest.xml  requirements.txt  server+api.bat  server+noapi.bat  server.bat  server.py  setup.bat  setup.py  setup_config.ini  start_server.bat  start_server.ps1  update.py  versioninfo.rc
Server/: Start.py  config.ini
main/: scripts.py
src/: main.rs
