[package]
name = "battlebit-server-launcher"
version = "3.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.29.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
futures = "0.3"
reqwest = { version = "0.12.8", features = ["stream"] }
zip = "2.2.0"
rfd = "0.15.0"
image = "0.25.2"
sysinfo = "0.32.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[build-dependencies]
embed-resource = "2.5"
winres = "0.1.11"
